[package]
name = "procps"
version = "0.1.0"
authors = ["Damian Bednarczyk <dxbednarczyk@gmail.com>"]
edition = "2021"
description = "Bindings for libprocps v3.3 with structured output"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
chrono = "0.4.23"
datetime = "0.5.2"

[build-dependencies]
bindgen = "0.63.0"
pkg-config = "0.3.26"

[dependencies]
libc = "0.2.138"
